# applicative-numbers

./: COPYING  README  README.md  applicative-numbers.cabal  project-foo.cabal  wikipage.tw
src/: ApplicativeNumeric-inc.hs  ApplicativeNumeric-inc.lhs  T1.lhs
src/Data/Numeric/: Function.hs  Vec.hs
