Name:                project-foo
Version:             0.0.0
Cabal-Version:       >= 1.2
Synopsis:            
Category:            
Description:
  What's it about?
  .
  Project wiki page: <http://haskell.org/haskellwiki/project-foo>
  .
  Copyright 2009 Conal Elliott; GPLv3 license.
Author:              Conal Elliott 
Maintainer:          conal@conal.net
Homepage:            http://haskell.org/haskellwiki/project-foo
Package-Url:         http://code.haskell.org/project-foo
Copyright:           (c) 2009 by Conal Elliott
License:             GPL
License-File:        COPYING
Stability:           experimental
build-type:          Simple

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base
  Exposed-Modules:     
                       
  ghc-options:         -Wall

--  ghc-prof-options:    -prof -auto-all 
